--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -12,6 +12,12 @@ on:
     # paths:
     # - some-subfolder/**
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
   deploy-book:
